# study-python

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: doc-issue.yml  feature-request.yml
.github/workflows/: deploy.yml  docs-ci.yml
docs/: .gitignore  .markdownlint-cli2.jsonc  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  test-ssr-fix.mdx  wrangler.jsonc
docs/.github/workflows/: deploy.yml
docs/blog/: 2026-07-10-python-learning-path.mdx  2026-07-12-modern-python-features.mdx  2026-07-15-uv-workflow.mdx  2026-07-18-decorator-deep-dive.mdx  authors.yml  tags.yml
docs/docs/: _template.mdx  about.mdx  docusaurus-guide.md  intro.mdx  playground.mdx
docs/docs/advanced/: _category_.json  async-await.mdx  defensive-programming.mdx  eval-function.mdx  hash-mechanism.mdx  index.mdx  pattern-matching.mdx  pythonic.mdx  type-hints.mdx  typing-module.mdx  walrus-operator.mdx
docs/docs/basics/: _category_.json  booleans.mdx  comments.mdx  index.mdx  input-output.mdx  numbers.mdx  operators.mdx  strings.mdx  variables.mdx
docs/docs/control-flow/: _category_.json  break-continue.mdx  for-loops.mdx  if-else.mdx  index.mdx  match-case.mdx  while-loops.mdx
docs/docs/data-structures/: _category_.json  (+6 more)
docs/scripts/: add-tags.py  fix-style.py  generate-doc-tags.py  generate_social_card.py  migrate-admonitions.py  strip-title-emojis.py
docs/static/: robots.txt
scripts/: README.md  improve_writing_style.py  optimize_docs.py
src/study_python/: README.md  __init__.py  main.py  sample_text.txt  test.py  timer.py  文本加密解密.py  文本词频统计.py
worker/: package.json  wrangler.toml
worker/src/: index.js  prompt.js  rag.js  stream.js
(+166 files in other folders)
