[project]
name = "study-python"
version = "0.1.0"
description = "python学习项目"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
authors = [{ name = "Tom", email = "tom@example.com" }]
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/study_python"]

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py314"
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
